<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_home_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#FFFFFF">

        <!-- HEADER -->
        <LinearLayout
            android:id="@+id/header_section"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="#000000"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Usuario"
                android:textColor="#A1A1A1"
                android:textSize="25sp"/>
        </LinearLayout>

        <!-- BOTONES SONGS Y HISTORY -->
        <LinearLayout
            android:id="@+id/button_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/header_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="2">

            <!-- Songs -->
            <LinearLayout
                android:id="@+id/btn_songs"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/borde_placeholder"
                android:padding="12dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_songs_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/favorite_icon"
                    android:contentDescription="@string/canciones" />

                <TextView
                    android:id="@+id/tv_songs_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/canciones"
                    android:textStyle="bold"
                    android:textColor="#111111"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Classes -->
            <LinearLayout
                android:id="@+id/btn_history"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/borde_placeholder"
                android:padding="12dp"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_history_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/historial_icon"
                    android:contentDescription="@string/historial" />

                <TextView
                    android:id="@+id/tv_history_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historial"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:textColor="#111111" />
            </LinearLayout>
        </LinearLayout>

        <!-- CARRUSEL -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_carousel"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/borde_placeholder"
            app:layout_constraintTop_toBottomOf="@id/button_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- INDICADORES DEL CARRUSEL -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_carousel_indicator"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            app:tabBackground="@drawable/tab_indicator_selector"
            app:tabGravity="center"
            app:tabIndicator="@null"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="14dp"
            app:tabMinWidth="14dp"
            app:tabPaddingStart="0dp"
            app:tabPaddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@id/vp_carousel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- SECCIÓN RACHA -->
        <LinearLayout
            android:id="@+id/section_streak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:background="@drawable/borde_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tab_carousel_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tv_streak_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/racha"
                android:textColor="#525252"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_streak_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="0 días"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_week_status"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </LinearLayout>

        <!-- BOTÓN FLOTANTE -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_assistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/assistant"
            android:src="@drawable/assitant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>